# OpenWindow

./: README.md  default.ini  pyproject.toml
openwindow/: cli.py  evaluate.py  predict.py  train.py
openwindow/core/: dataset.py  evaluation.py  openwindow.py
openwindow/pytorch/: data.py  logging.py  models.py  training.py
scripts/: closedset-50.ini  openset-f-o1-o2.ini  openset-o1-f-o2.ini  openset-o1-o2-f.ini  run.sh
